tambah Update card n deck

--- a/app/views/card/edit.phtml
+++ b/app/views/card/edit.phtml
@@ -1,8 +1,8 @@
-<h2>Create Card Form</h2>
+<h2>Edit Card Form</h2>
 
 <p><?php echo $this->flash->output() ?></p>
 
-<?php echo $this->tag->form("/card/create/submit"); ?>
+<?php echo $this->tag->form("/card/edit/submit"); ?>
 
     <p>
         <label for="frontside">Front Side</label>
