--- a/app/views/deck/edit.phtml
+++ b/app/views/deck/edit.phtml
@@ -1,8 +1,8 @@
-<h2>Create Deck Form</h2>
+<h2>Edit Deck Form</h2>
 
 <p><?php echo $this->flash->output() ?></p>
 
-<?php echo $this->tag->form("deck/create/submit"); ?>
+<?php echo $this->tag->form("deck/edit/submit"); ?>
 
     <p>
         <label for="title">Deck Title</label>
