--- a/app/views/card/show.phtml
+++ b/app/views/card/show.phtml
@@ -35,12 +35,21 @@
                         ?>
                     </td>
                     <td><?php echo $card->difficulty; ?></td>
-                    <td><?php echo $this->tag->linkTo([
+                    <td>
+                        <?php
+                            echo $this->tag->linkTo([
                                 "card/delete/".$card->id,
                                 'Delete',
                                 "class" => "btn btn-danger",
                                 "style" => "margin: 10pt;",
                                 "onclick" => "return confirm('Are you sure?')",
+                            ]);
+
+                            echo $this->tag->linkTo([
+                                "card/edit/".$card->id,
+                                'Edit',
+                                "class" => "btn btn-warning",
+                                "style" => "margin: 10pt;",
                             ]);
                         ?>
                     </td>
