--- a/app/views/user/register.phtml
+++ b/app/views/user/register.phtml
@@ -1,31 +1,38 @@
-<h2>Register Form</h2>
+<div class="container">
+    <h2 style="margin-top: 1rem;">Register here!</h2>
 
-<p><?php echo $this->flash->output() ?></p>
+    <p><?php echo $this->flash->output() ?></p>
 
-<?php echo $this->tag->form("user/register/submit"); ?>
+    <div class="jumbotron" style="padding: 2rem; width: 50%;">
+        <?php echo $this->tag->form("user/register/submit"); ?>
 
-    <p>
-        <label for="name">Name</label>
-        <?php echo $form->render("name"); ?>
-    </p>
+            <div class="form-group" style="width: 90%;">
+                <label for="name">Name</label>
+                <?php echo $form->render("name"); ?>
+            </div>
 
-    <p>
-        <label for="email">E-Mail</label>
-        <?php echo $form->render("email"); ?>
-    </p>
+            <div class="form-group" style="width: 90%;">
+                <label for="email">E-Mail</label>
+                <?php echo $form->render("email"); ?>
+            </div>
 
-    <p>
-        <label for="password">Password</label>
-        <?php echo $form->render("password"); ?>
-    </p>
+            <div class="form-group" style="width: 90%;">
+                <label for="password">Password</label>
+                <?php echo $form->render("password"); ?>
+            </div>
 
-    <p>
-        <label for="password_confirm">Confirm Password</label>
-        <?php echo $form->render("password_confirm"); ?>
-    </p>
+            <div class="form-group" style="width: 90%;">
+                <label for="password_confirm">Confirm Password</label>
+                <?php echo $form->render("password_confirm"); ?>
+            </div>
 
-    <p>
-        <?php echo $form->render("submit"); ?>
-    </p>
+            <div class="form-group" style="margin-top: 2rem;">
+                <?php echo $form->render("submit"); ?>
+            </div>
 
-</form>
+        </form>
+
+        <p style="margin-top: 2rem;">Already have an account? Login <a href="login">here!</a></p>
+
+    </div>
+</div>
