--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -8,21 +8,21 @@
 
 <div class="jumbotron" style="margin-top: 1rem; background-image: url(public/img/black.jpg); background-size: cover;">
     <div class="display-1"style="color: white; text-align: right;">FLASH</div>
-    <div class="display-4" style="color: white; text-align: right;">Learn everything</div>
+    <div class="display-4" style="color: white; text-align: right;">Limitless speech</div>
     <br>
     <div class="container" style="text-align: right;">
         <?php
 
             echo $this->tag->linkTo([
                 'user/register',
-                'Register here!',
+                'Register',
                 "class" => "btn btn-light btn-lg pull-right",
                 "style" => "margin-top: 5rem; text-align: right;",
             ]);
 
             echo $this->tag->linkTo([
                 'user/login',
-                'Login here!',
+                'Login',
                 "class" => "btn btn-light btn-lg pull-right",
                 "style" => "margin-top: 5rem; margin-left: 5rem;",
             ]);
@@ -33,7 +33,7 @@
 </div>
 
 <blockquote class="blockquote">
-  <p class="mb-0">“Live as if you were to die tomorrow. Learn as if you were to live forever.”</p>
-  <footer class="blockquote-footer">Mahatma Gandhi</footer>
+  <p class="mb-0">“You can never understand one language until you understand at least two.”</p>
+  <footer class="blockquote-footer">Geoffrey Willans</footer>
 </blockquote>
 
