--- a/app/views/card/show.phtml
+++ b/app/views/card/show.phtml
@@ -1,7 +1,7 @@
 <div class=container>
     <br>
     <div class="jumbotron dark" style="background-color: #242424;">
-        <div class="display-4" style="margin-bottom: 2rem; margin-top: -3rem; color: white;">Manage <?php echo $deck->title?>'s Cards</div>
+        <div class="display-4" style="margin-bottom: 2rem; margin-top: -3rem; color: white;">Manage <?php echo $deck->title?> Cards</div>
 
         <p><?php echo $this->flash->output() ?></p>
 
