--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -6,6 +6,15 @@
 
 <p>This page is located at <code>views/index/index.phtml</code></p> -->
 
+<head>
+  <title>Testing</title>
+  <style>
+    #ABC {
+      background-color: #D9D0DE;
+    }
+  </style>
+</head>
+
 <div class="jumbotron" style="margin-top: 1rem; background-image: url(public/img/black.jpg); background-size: cover;">
     <div class="display-1"style="color: white; text-align: right;">FLASH</div>
     <div class="display-4" style="color: white; text-align: right;">Limitless speech</div>
@@ -37,3 +46,100 @@
   <footer class="blockquote-footer">Geoffrey Willans</footer>
 </blockquote>
 
+
+<!-- Section: Testimonials v.3 -->
+<section id="ABC" class="team-section text-center my-5">
+
+    <h4 class="font-weight-bold dark-grey-text mt-4">.</h4>
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold my-5">How This Works</h2>
+  <!-- Section description -->
+  <p class="dark-grey-text w-responsive mx-auto mb-5">Over 800 academic studies have proven the efficiency of spaced repetition. Here you can create your own personal learning machine quickly and effectively</p>
+
+  <!--Grid row-->
+  <div class="row text-center">
+
+    <!--Grid column-->
+    <div class="col-md-4 mb-md-0 mb-5">
+
+      <div class="testimonial">
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+        </div>
+        <!--Content-->
+        <h4 class="font-weight-bold dark-grey-text mt-4">Active Recall</h4>
+        <h6 class="font-weight-bold blue-text my-3"></h6>
+        <p class="font-weight-normal dark-grey-text">
+          <i class="fas fa-quote-left pr-2"></i>Think of the answer in your head</p>
+        <!--Review-->
+        <div class="orange-text">
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star-half-alt"> </i>
+        </div>
+      </div>
+
+    </div>
+    <!--Grid column-->
+
+    <!--Grid column-->
+    <div class="col-md-4 mb-md-0 mb-5">
+
+      <div class="testimonial">
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+        </div>
+        <!--Content-->
+        <h4 class="font-weight-bold dark-grey-text mt-4">METACOGNITION</h4>
+        <p class="font-weight-normal dark-grey-text">
+          <i class="fas fa-quote-left pr-2"></i>Rate your confidence</p>
+        <!--Review-->
+        <div class="orange-text">
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+        </div>
+      </div>
+
+    </div>
+    <!--Grid column-->
+
+    <!--Grid column-->
+    <div class="col-md-4">
+
+      <div class="testimonial">
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+        </div>
+        <!--Content-->
+        <h4 class="font-weight-bold dark-grey-text mt-4">SPACED REPETITION</h4>
+        <p class="font-weight-normal dark-grey-text">
+          <i class="fas fa-quote-left pr-2"></i>A customized stream of cards to help you learn faster</p>
+        <!--Review-->
+        <div class="orange-text">
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="fas fa-star"> </i>
+          <i class="far fa-star"> </i>
+        </div>
+      </div>
+
+    </div>
+    <!--Grid column-->
+
+  </div>
+  <!--Grid row-->
+
+  <h4 class="font-weight-bold dark-grey-text mt-4">It's that simple</h4>
+  <h4 class="font-weight-bold dark-grey-text mt-4">.</h4>
+
+</section>
+<!-- Section: Testimonials v.3 -->
