--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -10,7 +10,7 @@
   <title>Testing</title>
   <style>
     #ABC {
-      background-color: #D9D0DE;
+      background-color: #ACBED8;
     }
   </style>
 </head>
