--- a/app/views/deck/reveal.phtml
+++ b/app/views/deck/reveal.phtml
@@ -2,9 +2,9 @@
   <title>Reveal</title>
   <style>
     #RevealSpace {
-        margin-left: auto;
-        margin-right: auto;
-        width: 60em
+        display: flex;
+        align-items: center;
+        justify-content: center 
     }
   </style>
 </head>
@@ -32,11 +32,11 @@
 
         <header>
         <?php
-            echo $currentCard->frontside;
-            echo "<br>";
-            echo $currentCard->time;
-            echo "<br>";
-            echo $currentCard->backside;
+            // echo $currentCard->frontside;
+            // echo "<br>";
+            // echo $currentCard->time;
+            // echo "<br>";
+            // echo $currentCard->backside;
             
         ?>
         </header>
