--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -47,7 +47,7 @@
 </blockquote>
 
 
-<!-- Section: Testimonials v.3 -->
+<!-- Section: How it works -->
 <section id="ABC" class="team-section text-center my-5">
 
     <h4 class="font-weight-bold dark-grey-text mt-4">.</h4>
@@ -63,7 +63,7 @@
     <div class="col-md-4 mb-md-0 mb-5">
 
       <div class="testimonial">
-        <!--Avatar-->
+        <!--Image-->
         <div class="avatar mx-auto">
           <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
@@ -72,14 +72,7 @@
         <h6 class="font-weight-bold blue-text my-3"></h6>
         <p class="font-weight-normal dark-grey-text">
           <i class="fas fa-quote-left pr-2"></i>Think of the answer in your head</p>
-        <!--Review-->
-        <div class="orange-text">
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star-half-alt"> </i>
-        </div>
+        
       </div>
 
     </div>
@@ -89,7 +82,7 @@
     <div class="col-md-4 mb-md-0 mb-5">
 
       <div class="testimonial">
-        <!--Avatar-->
+        <!--Image-->
         <div class="avatar mx-auto">
           <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
@@ -97,14 +90,7 @@
         <h4 class="font-weight-bold dark-grey-text mt-4">METACOGNITION</h4>
         <p class="font-weight-normal dark-grey-text">
           <i class="fas fa-quote-left pr-2"></i>Rate your confidence</p>
-        <!--Review-->
-        <div class="orange-text">
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-        </div>
+        
       </div>
 
     </div>
@@ -114,7 +100,7 @@
     <div class="col-md-4">
 
       <div class="testimonial">
-        <!--Avatar-->
+        <!--Image-->
         <div class="avatar mx-auto">
           <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
@@ -122,14 +108,7 @@
         <h4 class="font-weight-bold dark-grey-text mt-4">SPACED REPETITION</h4>
         <p class="font-weight-normal dark-grey-text">
           <i class="fas fa-quote-left pr-2"></i>A customized stream of cards to help you learn faster</p>
-        <!--Review-->
-        <div class="orange-text">
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="fas fa-star"> </i>
-          <i class="far fa-star"> </i>
-        </div>
+        
       </div>
 
     </div>
@@ -142,4 +121,4 @@
   <h4 class="font-weight-bold dark-grey-text mt-4">.</h4>
 
 </section>
-<!-- Section: Testimonials v.3 -->
+<!-- Section: How it works -->
