--- a/app/views/deck/learn.phtml
+++ b/app/views/deck/learn.phtml
@@ -18,12 +18,11 @@
             <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
                 <!--Card-->
                 <div class="card front">
-                    <!--Avatar-->
                     <div class="card-body">
-                    <!--Name-->
+                    <!--Front-->
                     <h4 class="font-weight-bold mb-4"><?php echo $currentCard->frontside;?></h4>
                     <hr>
-                    <!--Quotation-->
+                    <!--Reveal-->
                     <?php echo $this->tag->linkTo([
                         "/user/profile/deck/".$currentCard->deck_id."/learn/".$currentCard->id."/reveal",
                         'Reveal',
