--- a/app/views/deck/reveal.phtml
+++ b/app/views/deck/reveal.phtml
@@ -18,12 +18,11 @@
             <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
                 <!--Card-->
                 <div class="card front">
-                    <!--Avatar-->
                     <div class="card-body">
-                    <!--Name-->
+                    <!--Front-->
                     <h4 class="font-weight-bold mb-4"><?php echo $currentCard->frontside;?></h4>
                     <hr>
-                    <!--Quotation-->
+                    <!--Back-->
                     <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i><?php echo $currentCard->backside;?></p>
                     </div>
                 </div>
