header ketinggalan ehe

--- a/app/views/deck/reveal.phtml
+++ b/app/views/deck/reveal.phtml
@@ -4,7 +4,24 @@
     #RevealSpace {
         display: flex;
         align-items: center;
-        justify-content: center 
+        justify-content: center;
+        
+
+        }
+    #GoButtons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .submit{
+         /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
     }
   </style>
 </head>
