home section and pics

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -12,6 +12,12 @@
     #ABC {
       background-color: #ACBED8;
     }
+    .avatar {
+    vertical-align: middle;
+    width: 250px;
+    height: 250px;
+    border-radius: 30%;
+    }
   </style>
 </head>
 
@@ -54,8 +60,9 @@
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold my-5">How This Works</h2>
   <!-- Section description -->
-  <p class="dark-grey-text w-responsive mx-auto mb-5">Over 800 academic studies have proven the efficiency of spaced repetition. Here you can create your own personal learning machine quickly and effectively</p>
-
+  <p class="dark-grey-text w-responsive">Over 800 academic studies have proven the efficiency of spaced repetition </p>
+  <p class="dark-grey-text w-responsive mx-auto mb-5">Here you can create your own personal learning machine quickly and effectively</p>
+  <br>
   <!--Grid row-->
   <div class="row text-center">
 
@@ -65,7 +72,7 @@
       <div class="testimonial">
         <!--Image-->
         <div class="avatar mx-auto">
-          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+          <img src="public/img/recall.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
         <!--Content-->
         <h4 class="font-weight-bold dark-grey-text mt-4">Active Recall</h4>
@@ -84,7 +91,7 @@
       <div class="testimonial">
         <!--Image-->
         <div class="avatar mx-auto">
-          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+          <img src="public/img/rate.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
         <!--Content-->
         <h4 class="font-weight-bold dark-grey-text mt-4">METACOGNITION</h4>
@@ -102,7 +109,7 @@
       <div class="testimonial">
         <!--Image-->
         <div class="avatar mx-auto">
-          <img src="https://images.fineartamerica.com/images-medium-large/square-pulse-v151-john-brooks.jpg" class="rounded-circle z-depth-1 img-fluid">
+          <img src="public/img/repeat.jpg" class="rounded-circle z-depth-1 img-fluid">
         </div>
         <!--Content-->
         <h4 class="font-weight-bold dark-grey-text mt-4">SPACED REPETITION</h4>
