remove double button

--- a/app/views/deck/learn.phtml
+++ b/app/views/deck/learn.phtml
@@ -66,13 +66,14 @@
                 </div>
             </div>
             <br>
-            <?php echo $this->tag->linkTo([
-                        "/user/profile/deck/".$this->session->get('DECK_ON'),
-                        'Back',
-                        "class" => "btn btn-primary btn-lg",
-                        "style" => "text-align: center;",
-                    ]);
-                 ?>
+            <?php
+                // echo $this->tag->linkTo([
+                //     "/user/profile/deck/".$this->session->get('DECK_ON'),
+                //     'Back',
+                //     "class" => "btn btn-primary btn-lg",
+                //     "style" => "text-align: center;",
+                // ]);
+            ?>
             <!--Card-->
             </div>
             <!--Grid column-->
